[package]
name = "intdate"
description = "A simple integer date library inspired by Python's int_date."
documentation = "https://docs.rs/intdate"
homepage = "https://github.com/Elinvynia/intdate"
repository = "https://github.com/Elinvynia/intdate.git"
keywords = ["intdate", "date", "integer"]
authors = ["Elinvynia <59487684+Elinvynia@users.noreply.github.com>"]
readme = "README.md"
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2018"

[dependencies]
